[package]
name = "hyperflut"
version = "0.1.0"
edition = "2021"
authors = [
    "Tim Visée <timvisee@gmail.com>",
    "kleines Filmröllchen <kleines@filmroellchen.eu>",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/kleinesfilmroellchen/hyperflut"
description = "Fast and feature-rich Pixelflut client focused on image and video streaming"
keywords = ["hyperflut", "pixelflut"]
categories = ["command-line-utilities"]

[features]
default = ["gst"]
gst = [
    "dep:gstreamer",
    "dep:gstreamer-app",
    "dep:gstreamer-video",
    "dep:derive_more",
]

[dependencies]
bufstream-fresh = "0.3"
clap = { version = "4", features = ["derive"] }
image = "0.25"
num_cpus = "1.13"
regex = "1.5"
rayon = "1.5"
net2 = "0.2"
anyhow = { version = "1", features = ["backtrace"] }
derive_more = { version = "1", features = [
    "display",
    "error",
], optional = true }
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }
log = { version = "0.4", features = ["std", "kv", "release_max_level_info"] }
env_logger = "0.11"
socket2 = { version = "0.5.9", features = ["all"] }
rand = "0.9.1"
itertools = "0.14.0"

[profile.release]
lto = "fat"
debug = "line-tables-only"
